[package]
name = "ch4nn337-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { path="../../../ethers-rs/ethers" } # todo replace by git repo when done
ch4nn337-sys = { path="../ch4nn337-sys" }
rand = "0.8.5"
serde = { version="1.0.164", features=["derive"] }
thiserror = "1.0.40"
serde_json = "1.0.96"

